--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="http://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
     <!--CSS-->
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="public/main.css">
     <title>Random Memes</title>
 </head>
 <body>
@@ -32,6 +32,9 @@
         </div>
     </nav>
     <div class="wrapper">
+        <div class="text-replace">
+            <span class="text-replace__span">Heute ist es sonnig !</span>
+        </div>
         <div class="carousel_wrap">
             <div id="carouselExampleControls" class="carousel slide" data-bs-interval="false">
                 <div class="carousel-inner">
