fix grunt replace

--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
     </nav>
     <div class="wrapper">
         <div class="text-replace">
-            <span class="text-replace__span">Heute ist es sonnig !</span>
+            <span class="text-replace__heading">Wetterbericht: </span>
+            <span class="text-replace__span">Heute ist es sonnig!</span>
         </div>
         <div class="carousel_wrap">
             <div id="carouselExampleControls" class="carousel slide" data-bs-interval="false">
