--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         <div class="text-replace">
             <span class="text-replace__heading">Wetterbericht: </span>
             <span class="text-replace__span">Heute ist es sonnig!</span>
+            <button class="button--four" type="button">HOVER ME, THEN CLICK ME!</button>
         </div>
         <div class="carousel_wrap">
             <div id="carouselExampleControls" class="carousel slide" data-bs-interval="false">
