--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div class="wrapper">
         <div class="text-replace">
             <span class="text-replace__heading">Wetterbericht: </span>
-            <span class="text-replace__span">Heute ist es sonnig!</span>
+            <span class="text-replace__span">Heute ist es sonnig!!!</span>
             <button class="button--four" type="button">HOVER ME, THEN CLICK ME!</button>
         </div>
         <div class="carousel_wrap">
